--- a/Frontend/src/assets/styles/setup/_mixins.scss
+++ b/Frontend/src/assets/styles/setup/_mixins.scss
@@ -28,31 +28,107 @@
 @mixin aspect-ratio($width, $height) {
     position: relative;
     overflow: hidden;
+
     &::before {
-      display: block;
-      content: "";
-      width: 100%;
-      padding-top: calc(($height / $width) * 100%);
+        display: block;
+        content: "";
+        width: 100%;
+        padding-top: calc(($height / $width) * 100%);
     }
-    > * {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
+
+    >* {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
     }
-  
-    > img {
-      height: 100%;
-      object-fit: cover;
+
+    >img {
+        height: 100%;
+        object-fit: cover;
     }
-  }
-  
-  // Mixin for removing hover efects on iphone screen
-  @mixin hover-supported {    
+}
+
+// Mixin for removing hover efects on iphone screen
+@mixin hover-supported {
     @media not all and (pointer: coarse) {
         &:hover {
             @content;
         }
     }
-  }
+}
+
+@mixin container-styles {
+    grid-template-columns: 1fr 2fr;
+    gap: 1em;
+
+    .info-divs {
+        margin-bottom: 1em;
+        grid-column: 1 / 2;
+        height: 100%;
+
+        .grid-item {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: auto auto;
+            align-items: center;
+            border: 2px solid $clrSecondary8;
+            gap: 1em;
+            padding: 1em;
+
+            &:not(:first-child) {
+                border-top: none;
+            }
+
+            &:nth-child(1) {
+                background-color: #bcf1ef;
+            }
+
+            &:nth-child(2) {
+                background-color: #9aeeeb;
+            }
+
+            &:nth-child(3) {
+                background-color: #7cebe7;
+            }
+
+            &:nth-child(4) {
+                background-color: #60e9e4;
+            }
+
+            &:nth-child(5) {
+                background-color: #41f5ef;
+            }
+
+            &:nth-child(6) {
+                background-color: #23f3ec;
+            }
+
+            .icon {
+                grid-row: 1 / 3;
+                grid-column: 2 / 3;
+                height: 75px;
+                width: 75px;
+                justify-self: end;
+            }
+
+            .title {
+                grid-row: 1 / 2;
+                grid-column: 1 / 2;
+                font-weight: bold;
+            }
+
+            .info {
+                grid-row: 2 / 3;
+                grid-column: 1 / 2;
+            }
+        }
+    }
+
+    .charts {
+        grid-column: 2 / 4;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 1rem;
+    }
+}
