--- a/Frontend/src/assets/styles/cmps/_GigOrder.scss
+++ b/Frontend/src/assets/styles/cmps/_GigOrder.scss
@@ -1,82 +1,171 @@
-.gig-order {
-    position: sticky;
-    top: 20px;
+.gig-aside {
+  position: sticky;
+  top: 20px;
+  height: 550px;
+  width: 35%;
+  margin-block-end: 30px;
+  background-color: $clrPrimary1;
+  color: $clrPrimary2;
+
+  .gig-interactions {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    width: 100%;
+    margin-block-start: 30px;
+    margin-block-end: 30px;
+
+    button{
+
+        .heart {
+          width: 16px;
+          height: 16px;
+        }
+
+        background-color:transparent;
+    }
+
+
+    img {
+        width: 16px;
+        height: 16px;
+    }
+
+    span {
+      display: flex;
+      align-items: center;
+      border: 1px solid $clrSecondary2;
+      border-radius: 3px;
+      padding: 2px 10px;
+      margin-inline-start: 10px;
+      height: 31px;
+      position: relative;
+
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 0;
+        height: 0;
+        border-style: solid;
+      }
+  
+      &::before {
+        border-color: transparent #dadbdd transparent transparent;
+        left: -9px;
+        top: 50%;
+        transform: translateY(-50%);
+        border-width: 8px 9px 8px 0;
+      }
+  
+      &::after {
+        border-color: transparent #fff transparent transparent;
+        border-width: 6px 8px 6px 0;
+        left: -8px;
+        top: 8px;
+        z-index: 3;
+      }
+    }
+    
+
+    .share {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 48px;
+      height: 34px;
+      background-color:transparent;
+      border: 1px solid $clrSecondary10;
+      border-radius: 8px;
+      margin-inline-start: 10px;
+
+      &:hover {
+        background-color: $clrSecondary10;
+      }
+
+    }
+
+    
+  }
+  .gig-order {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 35%;
-    height: 550px;
-    padding: 24px;
+    height: 480px;
     border: 1px solid $clrSecondary2;
-    background-color: $clrPrimary1;
-    color: $clrPrimary2;
-    
+    padding: 24px;
+
     .title {
-        display: flex;
-        justify-content: space-between;
+      display: flex;
+      justify-content: space-between;
+      margin-block-end: 10px;
     }
-    
-    p{ 
-        color:$clrSecondary6;
+
+    p {
+      color: $clrSecondary6;
     }
 
     img {
-        width: 13px;
+      width: 13px;
     }
 
     .shipping-info {
+      display: flex;
+      justify-content: space-between;
+      color: $clrSecondary6;
+      font-weight: bold;
+      margin-block-end: 10px;
+
+      .inside-shipping {
         display: flex;
-        justify-content: space-between;
-        color:$clrSecondary6;
-        font-weight: bold;
 
-        .inside-shipping {
-            display: flex;
-
-            span {
-                margin-inline-start: 8px;
-            }
+        span {
+          margin-inline-start: 8px;
         }
+      }
     }
 
     ul {
-        list-style: none;
-        padding: 0;
-        color:$clrSecondary6;
-        img {
-            margin-inline-end: 16px;
-        }
+      list-style: none;
+      padding: 0;
+      color: $clrSecondary6;
+      margin-block-end: 10px;
+      img {
+        margin-inline-end: 16px;
+      }
     }
 
     .continue-btn {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      .continue {
         display: flex;
-        flex-direction: column;
         justify-content: center;
 
-        .continue {
-            display: flex;
-            justify-content: center;
+        button {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          height: 40px;
+          background-color: $clrPrimary2;
+          color: $clrPrimary1;
+          border: 1px solid $clrPrimary2;
+          border-radius: 4px;
 
-            button {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                width: 100%;
-                height: 40px;
-                background-color: $clrPrimary2;
-                color: $clrPrimary1;
-                border: 1px solid $clrPrimary2;
-                border-radius: 4px;
-
-                img {
-                    position: relative;
-                    left: 30%;
-                }
-            }
+          img {
+            position: relative;
+            left: 30%;
+          }
         }
+      }
     }
+  }
 
-    @media (max-width : 720px){
-        width: 100%;
-    }
+  @media (max-width: 720px) {
+    width: 100%;
+  }
 }
