--- a/Frontend/src/assets/styles/setup/_mixins.scss
+++ b/Frontend/src/assets/styles/setup/_mixins.scss
@@ -108,8 +108,6 @@
             .icon {
                 grid-row: 1 / 3;
                 grid-column: 2 / 3;
-                height: 75px;
-                width: 75px;
                 justify-self: end;
             }
 
@@ -122,6 +120,7 @@
             .info {
                 grid-row: 2 / 3;
                 grid-column: 1 / 2;
+                font-weight: bold;
             }
         }
     }
