--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -263,7 +263,12 @@
 
 .dashboard-page {
     @media (max-width: 1400px) {
-        padding: 2em;
+        padding: 1em;
+    }
+
+    @media (min-width: 1400px) {
+        margin: auto;
+        margin-top: 1em;
     }
 
     .info-divs {
