--- a/Frontend/src/assets/styles/cmps/_UserOrders.scss
+++ b/Frontend/src/assets/styles/cmps/_UserOrders.scss
@@ -1,55 +1,64 @@
 .user-orders {
-    justify-content: space-between;
-    margin-block-start: 32px;
-    margin-block-end: 32px;
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
 
-    .orders-title {
-        align-items: center;
-        height: 60px;
-        width: 200px;
-        padding: 23px;
-        border: 1px solid $clrSecondary2;
-        background-color: $clrPrimary1;
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        border: 1px solid #e0e0e0;
     }
 
-    .orders {
-        align-items: center;
-        width: 45%;
+    th,
+    td {
+        padding: 1em;
+        text-align: center;
+        border: 1px solid #e0e0e0;
 
-        li {
-            width: 100%;
+        &:not(:last-child),
+        &:not(:first-child) {
+            border-right: none;
+            border-left: none;
+        }
+    }
 
-            .user-order {
-                display: flex;
-                flex-direction: column;
-                width: 100%;
-                height: 200px;
-                padding: 23px;
-                border: 1px solid $clrSecondary2;
-                border-radius: 8px;
-                margin-block-start: 20px;
-                background-color: $clrPrimary1;
+    thead tr {
+        background-color: #f5f5f5;
+    }
 
-                &.pending {
-                    background-color: #0077ff;
-                }
+    th {
+        font-weight: bold;
+    }
 
-                &.denied {
-                    background-color: #ff0000;
-                }
+    td {
+        color: #333;
+    }
 
-                &.accepted {
-                    background-color: #ffff00;
-                }
+    span {
+        padding: 0.5em 1em;
+        color: white;
+        border-radius: 5px;
+        font-weight: bold;
+        width: 100%;
+        display: block;
+        box-shadow: 0px 0px 2px 2px #bbb2b2;
 
-                &.completed {
-                    background-color: #32cf32;
-                }
+        &.pending {
+            background-color: #0077ff;
+        }
 
-                .order-buttons {
-                    justify-content: space-between;
-                }
-            }
+        &.denied {
+            background-color: #ff0000;
+        }
+
+        &.accepted {
+            background-color: #ffff00;
+            color: black;
+        }
+
+        &.completed {
+            background-color: #32cf32;
         }
     }
 }
