--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -25,6 +25,8 @@ $clr1: #19a463;
 $clr2: #78cdd2;
 $clr3: #29bd49;
 $clr4: #d83b3b;
+$clr5: #0077ff;
+$clr6: #ffff54;
 
 // Breakpoints
 $mobile-breakpoint: 460px;
