--- a/Frontend/src/assets/styles/cmps/_PaymentDetails.scss
+++ b/Frontend/src/assets/styles/cmps/_PaymentDetails.scss
@@ -1,81 +1,89 @@
 .payment-details {
-  flex: 1;
-  width: 58%;
-  margin-block-start: 32px;
-  margin-block-end: 32px;
-  background-color: $clrPrimary1;
-  border: 1px solid $clrSecondary5;
-  color: $clrSecondary5;
+  width: 58.33333%;
+  max-width: 833.555px;
   padding: 0 16px;
 
-  h2 {
-    font-family: macan-light;
-  }
+  .details {
+    padding: 16px 24px;
+    background-color: $clrPrimary1;
+    border: 1px solid $clrSecondary5;
+    color: $clrSecondary5;
+    border-radius: 5px;
 
-  .credit-details {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 80%;
-
-    span {
-      font-weight: 700;
+    h2 {
+      font-family: macan-light;
     }
-  }
 
-  .credit-type {
-    display: flex;
-    align-items: center;
-    height: 50px;
+    .credit-details {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 80%;
 
-    img {
-      width: 80px;
+      span {
+        font-weight: 700;
+      }
+    }
+
+    .credit-type {
+      display: flex;
+      align-items: center;
       height: 50px;
-    }
-  }
 
-  .credit-number {
-    display: flex;
-    flex-direction: column;
-    width: 240px;
-    input {
-      width: 94%;
+      img {
+        width: 80px;
+        height: 50px;
+      }
     }
-  }
 
-  .rest-of-details {
-    display: flex;
-    justify-content: space-between;
+    .credit-number {
+      display: flex;
+      flex-direction: column;
+      width: 240px;
+
+      input {
+        width: 94%;
+      }
+    }
+
+    .rest-of-details {
+      display: flex;
+      justify-content: space-between;
+
+      .credit-date {
+        display: flex;
+        flex-direction: column;
+
+        input {
+          width: 80%;
+          border: 1px solid $clrSecondary5;
+        }
+      }
+    }
 
     .credit-date {
       display: flex;
       flex-direction: column;
+
       input {
-        width: 80%;
+        width: 60%;
         border: 1px solid $clrSecondary5;
       }
-    }
-  }
 
-  .credit-date {
-    display: flex;
-    flex-direction: column;
-    input {
-      width: 60%;
-      border: 1px solid $clrSecondary5;
-    }
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-    }
-    input[type="number"] {
-      -moz-appearance: textfield;
-    }
-  }
+      input::-webkit-outer-spin-button,
+      input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
 
-  .buyer-info {
-    display: flex;
-    flex-direction: column;
+      input[type="number"] {
+        appearance: textfield;
+      }
+    }
+
+    .buyer-info {
+      display: flex;
+      flex-direction: column;
+    }
   }
 }
