--- a/Frontend/src/assets/styles/views/_GigPurchase.scss
+++ b/Frontend/src/assets/styles/views/_GigPurchase.scss
@@ -1,3 +1,7 @@
-.gig-purchase{
+.gig-purchase {
     display: flex;
+    width: 100%;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    max-width: 1432px;
 }
