--- a/Frontend/src/assets/styles/cmps/_UserOrders.scss
+++ b/Frontend/src/assets/styles/cmps/_UserOrders.scss
@@ -36,13 +36,14 @@
     }
 
     span {
-        padding: 0.5em 1em;
-        color: white;
+        padding: 0.6em 0.8em;
+        color: $clrSecondary9;
         border-radius: 5px;
-        font-weight: bold;
-        width: 100%;
         display: block;
-        box-shadow: 0px 0px 2px 2px #bbb2b2;
+        border: 1px solid $clrSecondary6;
+        font-size: 16px;
+        line-height: 100%;
+        font-family: 'macan-bold';
 
         &.pending {
             background: $clr5;
@@ -50,15 +51,46 @@
 
         &.denied {
             background: $clr4;
+            color: $clrPrimary2;
         }
 
         &.accepted {
             background: $clr6;
-            color: black;
+            color: $clrPrimary2;
         }
 
         &.completed {
             background: $clr3;
+        }
+    }
+
+    .dropdown-menu {
+        position: absolute;
+        z-index: 1;
+        min-width: 50px;
+        background: $clrPrimary1;
+        border: 1px solid $clrPrimary2;
+        border-radius: 5px;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+        margin-top: 10px;
+
+        button {
+            background: none;
+            width: 100%;
+            text-align: left;
+            padding: 10px 15px;
+            font-size: 16px;
+            font-family: 'macan-bold';
+            transition: background-color 0.2s;
+
+            &:hover {
+                background-color: $clrSecondary1;
+                border-radius: 5px;
+            }
+
+            &:not(:last-child) {
+                border-bottom: 1px solid $clrPrimary2;
+            }
         }
     }
 }
