--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -20,7 +20,7 @@
 @import "cmps/CategoryNavbar";
 
 @import "cmps/GigNavbar";
-@import "cmps/GigHeader";
+@import "cmps/GigDetailsHeader";
 @import "cmps/AboutSeller";
 @import "cmps/GigOrder";
 @import "cmps/GigInfo";
@@ -31,6 +31,7 @@
 @import "cmps/MenuFilterContent";
 @import "cmps/GigList";
 @import "cmps/GigPreview";
+@import "cmps/UserPreview";
 @import "cmps/Pagination";
 
 @import "cmps/UserInfo";
