--- a/Frontend/src/assets/styles/basics/_helpers.scss
+++ b/Frontend/src/assets/styles/basics/_helpers.scss
@@ -124,11 +124,15 @@
 
 .liked {
   background-position-x: right !important;
-  right: rem(5px)
+  right: rem(5px);
 }
-// i {
-//     svg{
-//         width:100%;
-//         height: 100%;
-//     }
-// }
+
+.selected {
+  opacity: 1;
+}
+.gap12 {
+  gap: 0.75em;
+}
+.gap16 {
+  gap: 1em;
+}
