--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -9,7 +9,7 @@
 
   img {
     aspect-ratio: 5/3;
-    object-fit: cover;
+    // object-fit: cover;
   }
 
   .carousel-container:hover ~ .preview-body .gig-title {
@@ -27,7 +27,6 @@
     background-position: 0 0;
     background-image: url(https://fiverr-res.cloudinary.com/npm-assets/@fiverr/logged_in_homepage_perseus/apps/collect.7e0cb84.svg);
     background-position-x: left;
- 
   }
 
   .gig-title {
@@ -41,36 +40,7 @@
     margin-top: rem(5px);
   }
 
-  .preview-user-info {
-    font-size: 0.875rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0.75em 0;
-    padding: 0 0 0 0.25em;
-
-    .avatar-fullname {
-      display: grid;
-      grid-auto-flow: column;
-      gap: 0.5em;
-    }
-
-    .avatar {
-      width: 1.5rem;
-      height: 1.5rem;
-      border-radius: 50%;
-      border: none;
-    }
-
-    .level {
-      text-transform: capitalize;
-      color: $clrSecondary8;
-      padding: 0 0.5em;
-      border-radius: 4px;
-    }
-  }
-
-  .user-rating {
+  .user-rating-order {
     padding: 0.5em 0 0;
 
     .rate {
