change in design of GigPurchase

--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -62,9 +62,9 @@ button {
   cursor: pointer;
 }
 
-input[type='radio'] {
-  display: none;
-}
+// input[type='radio'] {
+//   display: none;
+// }
 // .icon {
 //     width: 13px;
 // }
