--- a/Frontend/src/assets/styles/cmps/_PaymentDetails.scss
+++ b/Frontend/src/assets/styles/cmps/_PaymentDetails.scss
@@ -2,17 +2,17 @@
   width: 58.33333%;
   max-width: 833.555px;
   padding: 0 16px;
-
+  color: $clrPrimary2;
+  
+  input {
+    background-color: none;
+  }
+  
   .details {
-    padding: 16px 24px;
-    background-color: $clrPrimary1;
+    padding: 16px;
+    background-color: $clrSecondary0;
     border: 1px solid $clrSecondary5;
-    color: $clrSecondary5;
-    border-radius: 5px;
-
-    h2 {
-      font-family: macan-light;
-    }
+    // border-radius: 5px;
 
     .credit-details {
       display: flex;
@@ -28,36 +28,29 @@
     .credit-type {
       display: flex;
       align-items: center;
-      height: 50px;
+      height: 25px;
+
+      input{
+        margin: 0;
+      }
+
+      span{
+        margin-inline-start: 16px;
+      }
 
       img {
         width: 80px;
-        height: 50px;
       }
     }
 
     .credit-number {
       display: flex;
       flex-direction: column;
-      width: 240px;
+      margin-inline-start: 20px;
+      width: 95.5%;
 
       input {
-        width: 94%;
-      }
-    }
-
-    .rest-of-details {
-      display: flex;
-      justify-content: space-between;
-
-      .credit-date {
-        display: flex;
-        flex-direction: column;
-
-        input {
-          width: 80%;
-          border: 1px solid $clrSecondary5;
-        }
+        width: 100%;
       }
     }
 
@@ -66,24 +59,44 @@
       flex-direction: column;
 
       input {
-        width: 60%;
-        border: 1px solid $clrSecondary5;
-      }
-
-      input::-webkit-outer-spin-button,
-      input::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-      }
-
-      input[type="number"] {
-        appearance: textfield;
+        width: 80%;
       }
     }
+  }
 
+  .private{
+    display: flex;
+    // justify-content: space-between;
+    .credit-date {
+      display: flex;
+      flex-direction: column;
+      margin-inline-start: 20px;
+      input {
+        width: 100%;
+        // border: 1px solid $clrSecondary5;
+      }
+      
+    }
     .buyer-info {
       display: flex;
       flex-direction: column;
+      margin-inline-start: 20px;
+      input {
+        width: 100%;
+        // border: 1px solid $clrSecondary5;
+      }
     }
+  }
+
+  .one{
+    border-block-end: 0;
+  }
+  .two{
+    background-color: $clrPrimary1;
+    border-block-start: 0;
+    border-block-end: 0;
+  }
+  .three{
+    border-block-start: 0;
   }
 }
