--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -3,6 +3,7 @@ $clrPrimary1: #fff;
 $clrPrimary2: #222325;
 $clrPrimary3: #000;
 
+$clrSecondary0:#FAFAFA;
 $clrSecondary1: #f5f5f5;
 $clrSecondary2: #dadbdd;
 $clrSecondary3: #ced1d6;
