--- a/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
+++ b/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
@@ -78,7 +78,7 @@
                 bottom: 0;
                 left: 0;
                 background-size: cover;
-                background-position: right;
+                background-position: 100% 100%;
                 transition: opacity 1s;
                 z-index: 1;
             }
