--- a/Frontend/src/assets/styles/cmps/_PaymentInfo.scss
+++ b/Frontend/src/assets/styles/cmps/_PaymentInfo.scss
@@ -4,12 +4,12 @@
     max-width: 596.667px;
     color: $clrSecondary6;
     // border: 1px solid $clrSecondary4;
-    border-radius: 4px;
+    // border-radius: 4px;
 
     .payment {
         padding: 16px 16px;
         background-color: $clrPrimary1;
-        border: 1px solid $clrSecondary4;
+        border: 1px solid $clrSecondary2;
         // border-inline-start: 1px solid $clrSecondary4;
         // border-inline-end: 1px solid $clrSecondary4;
         margin: 0 auto;
@@ -24,6 +24,7 @@
                 width: 110px;
                 height: 70px;
                 margin-inline-end: 1em;
+                border-radius: 4px;
             }
             p{
                 font-weight: bold;
@@ -35,7 +36,7 @@
             display: flex;
             justify-content: space-between;
             padding-block-start: 20px;
-            border-block-start: 1px solid $clrSecondary4;
+            border-block-start: 1px solid $clrSecondary2;
             p{
             font-weight: 600;
             }
@@ -73,7 +74,7 @@
         }
 
         .final {
-            border-top: 1px solid $clrSecondary4;
+            border-top: 1px solid $clrSecondary2;
             padding-block-start: 20px;
             font-weight: 700;
         }
