further work on mq

--- a/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
+++ b/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
@@ -104,7 +104,7 @@
                     }
                 }
 
-                div {
+                .quick-search {
                     align-items: center;
                     gap: 0.3em;
                     width: fit-content;
