--- a/Frontend/src/assets/styles/cmps/_SearchBar.scss
+++ b/Frontend/src/assets/styles/cmps/_SearchBar.scss
@@ -35,6 +35,7 @@
                         img {
                             width: 16px;
                             height: 16px;
+                            align-self: center;
                         }
                     }
                 }
